NEW: [features/improvments]
+Launch adds support for OCaml (patch from quode) and LaTex
+Shortcut for maximizing/minimizing the editor pane (patch from Rudi Pettazzi)
+Add menu entry for Fold All action (patch from Giuseppe "Cowo" Corbelli)
+Codebrowser adds support for XML/HTML (patch from Rudi Pettazzi)
+Some minor changes to the default hightlighting style. The old default is now
called Cream.

BUG FIXES:
+Update window being shown at same time as splash window causing lockups.
+Fix trim trailing whitespace from getting the wrong text position when certain
unicode characters are present.
+Add some missing JavaScript keywords (patch from Rudi Pettazzi)
+Fix groups not being expanded on a regex replace action.
+Fix Cmd+Shift+Left/Right not selecting line on osx.
+Fix Comment command not working on Latex documents
+Fix some unicode errors in the log system.
+Fix platform detection for some components when running on Vista.
+Fix indentation guides preference not properly being applied on restart.
+Fix transparency settings not being set on Linux.
+Add some missing PHP keywords (patch from Giuseppe "Cowo" Corbelli)
+Fix Display Font preference not being applied.

#-----------------------------------------------------------------------------#

VERSION 0.4.40
DATE 01/02/2009
22nd Alpha Release

NEWS:

This is the first release of 2009. It was mostly focused on internal cleanup and
api refactoring. Through this a number of bugs have been fixed and a number of
existing features have recieved some refinements. The most noteable changes
are listed below.

NEW: [features/improvements]
+Some improvements to the Python autocompletion.
+Comment/Uncomment are now combined into a single toggle action
 (modified patch from Giuseppe "Cowo" Corbelli).
+When mixed eol characters are detected a dialog warning of it is now shown,
 that offers to convert them instead of toggling on eol visibility as it
 previously did, since this was found to be confusing to many.